fix(profile): fix profile dropdown not showing (#212)
- add onclickoutside event listeners via package
    - change profile overflow to show

[Fixes #166287132]

--- a/client/assets/components/_dropdown.scss
+++ b/client/assets/components/_dropdown.scss
@@ -1,8 +1,6 @@
 @import '../tools/functions.scss';
 
 .dropdown {
-  overflow: auto;
-
   &__dp-wrapper {
     list-style-type: none;
     margin: 0;
@@ -11,10 +9,6 @@
     background-color: #FFFFFF;
     font-size: 1.25rem;
     max-height: rem(120px);
-  
-    &__list {
-      padding: rem(5px) rem(12px);
-    }
   
     &__list:hover {
       background-color: #EEEEEE;
